Pgvector condition fix

--- a/templates/secrets/pgvector.yaml
+++ b/templates/secrets/pgvector.yaml
@@ -1,7 +1,7 @@
 {{- $secretName := .Values.pgvector.secret.existingSecret | default "docspace-pgvector" -}}
 {{- $password := include "docspace.generateSecret" (list . .Values.pgvector.secret.pgvectorSecret $secretName "POSTGRES_PASSWORD") -}}
 ---
-{{- if and (eq (include "docspace.pgvector.createSecret" .) "true") .Values.pgvector.laqngflow }}
+{{- if and (eq (include "docspace.pgvector.createSecret" .) "true") .Values.langflow.enabled }}
 apiVersion: v1
 kind: Secret
 metadata:
