--- a/values.yaml
+++ b/values.yaml
@@ -2617,8 +2617,6 @@ doceditor:
   containerPorts:
     # doceditor.containerPorts.app Doceditor container port
     app: 5050
-    # doceditor.containerPorts.doceditor Doceditor additional container port
-    doceditor: 5013
   # Probe used for the Doceditor container: startup, readiness and liveness probes
   # ref: https://kubernetes.io/docs/tasks/configure-pod-container/configure-liveness-readiness-startup-probes/
   # The parameters below for startup probes are used only when `doceditor.startupProbe.enabled=true`
@@ -2629,7 +2627,7 @@ doceditor:
       # doceditor.startupProbe.httpGet.path Checking the path for startupProbe
       path: /doceditor/health
       # doceditor.startupProbe.httpGet.port Checking the port for startupProbe
-      port: 5013
+      port: 5050
     # doceditor.startupProbe.failureThreshold Failure threshold for startupProbe
     failureThreshold: 30
     # doceditor.startupProbe.periodSeconds Period seconds for startupProbe
@@ -2644,7 +2642,7 @@ doceditor:
       # doceditor.readinessProbe.httpGet.path Checking the path for readinessProbe
       path: /doceditor/health
       # doceditor.readinessProbe.httpGet.port Checking the port for readinessProbe
-      port: 5013
+      port: 5050
     # doceditor.readinessProbe.periodSeconds Period seconds for readinessProbe
     periodSeconds: 10
     # doceditor.readinessProbe.successThreshold Success threshold for readinessProbe
@@ -2661,7 +2659,7 @@ doceditor:
       # doceditor.livenessProbe.httpGet.path Checking the path for livenessProbe
       path: /doceditor/health
       # doceditor.livenessProbe.httpGet.port Checking the port for livenessProbe
-      port: 5013
+      port: 5050
     # doceditor.livenessProbe.periodSeconds Period seconds for livenessProbe
     periodSeconds: 10
     # doceditor.livenessProbe.successThreshold Success threshold for livenessProbe
@@ -3020,9 +3018,9 @@ login:
   # It is used to trigger events to run at certain points in a container's lifecycle
   # There are two hooks that are exposed: `PostStart` and `PreStop`
   lifecycleHooks: {}
-  # login.containerPorts.login Login container port
+  # login.containerPorts.app Login container port
   containerPorts:
-    login: 5011
+    app: 5050
   # Probe used for the Login container: startup, readiness and liveness probes
   # ref: https://kubernetes.io/docs/tasks/configure-pod-container/configure-liveness-readiness-startup-probes/
   # The parameters below for startup probes are used only when `login.startupProbe.enabled=true`
@@ -3033,7 +3031,7 @@ login:
       # login.startupProbe.httpGet.path Checking the path for startupProbe
       path: /login/health
       # login.startupProbe.httpGet.port Checking the port for startupProbe
-      port: 5011
+      port: 5050
     # login.startupProbe.failureThreshold Failure threshold for startupProbe
     failureThreshold: 30
     # login.startupProbe.periodSeconds Period seconds for startupProbe
@@ -3048,7 +3046,7 @@ login:
       # login.readinessProbe.httpGet.path Checking the path for readinessProbe
       path: /login/health
       # login.readinessProbe.httpGet.port Checking the port for readinessProbe
-      port: 5011
+      port: 5050
     # login.readinessProbe.periodSeconds Period seconds for readinessProbe
     periodSeconds: 10
     # login.readinessProbe.successThreshold Success threshold for readinessProbe
@@ -3065,7 +3063,7 @@ login:
       # login.livenessProbe.httpGet.path Checking the path for livenessProbe
       path: /login/health
       # login.livenessProbe.httpGet.port Checking the port for livenessProbe
-      port: 5011
+      port: 5050
     # login.livenessProbe.periodSeconds Period seconds for livenessProbe
     periodSeconds: 10
     # login.livenessProbe.successThreshold Success threshold for livenessProbe
