--- a/templates/configmaps/healthchecks.yaml
+++ b/templates/configmaps/healthchecks.yaml
@@ -23,4 +23,6 @@ data:
   BACKUP_HOST: {{ .Values.connections.backupHost }}:{{ .Values.backup.containerPorts.app }}
   CLEAR_EVENTS_HOST: {{ .Values.connections.clearEventsHost }}:{{ .Values.clearEvents.containerPorts.app }}
   BACKUP_BACKGRUOND_TASKS_HOST: {{ .Values.connections.backupBackgroundTasksHost }}:{{ .Values.backupBackgroundTasks.containerPorts.app }}
+  SSOAUTH_HOST: {{ .Values.connections.ssoauthHost }}:{{ .Values.ssoauth.containerPorts.app }}
+  SOCKET_HOST: {{ .Values.connections.socketHost }}:{{ .Values.socket.containerPorts.app }}
 {{- end }}
