Add three-mode secret generation

--- a/templates/secrets/identity.yaml
+++ b/templates/secrets/identity.yaml
@@ -14,5 +14,7 @@ metadata:
   {{- end }}
 type: Opaque
 stringData:
-  SPRING_APPLICATION_ENCRYPTION_SECRET: {{ include "docspace.generateSecret" (list . .Values.identity.secret.springEncryptionValue $secretName "SPRING_APPLICATION_ENCRYPTION_SECRET") | quote }}
+  {{- $springVal := include "docspace.identity.secretValue" (list . .Values.identity.secret.springEncryptionValue) }}
+  {{- $forceOverwrite := eq .Values.identity.secret.generate "reset" }}
+  SPRING_APPLICATION_ENCRYPTION_SECRET: {{ include "docspace.generateSecret" (list . $springVal "docspace-identity" "SPRING_APPLICATION_ENCRYPTION_SECRET" $forceOverwrite) | quote }}
 {{- end }}
