--- a/templates/secrets/identity.yaml
+++ b/templates/secrets/identity.yaml
@@ -14,7 +14,5 @@ metadata:
   {{- end }}
 type: Opaque
 stringData:
-  {{- $springVal := include "docspace.identity.secretValue" (list . .Values.identity.secret.springEncryptionValue) }}
-  {{- $forceOverwrite := eq .Values.identity.secret.generate "reset" }}
-  SPRING_APPLICATION_ENCRYPTION_SECRET: {{ include "docspace.generateSecret" (list . $springVal "docspace-identity" "SPRING_APPLICATION_ENCRYPTION_SECRET" $forceOverwrite) | quote }}
+  SPRING_APPLICATION_ENCRYPTION_SECRET: {{ include "docspace.generateSecret" (list . (include "docspace.identity.springEncryptionValue" .) $secretName "SPRING_APPLICATION_ENCRYPTION_SECRET") | quote }}
 {{- end }}
