Fix identity secret generation Co-authored-by: Valeria Bagisheva <valeriya.bagisheva@onlyoffice.com> Co-committed-by: Valeria Bagisheva <valeriya.bagisheva@onlyoffice.com>

--- a/templates/secrets/identity.yaml
+++ b/templates/secrets/identity.yaml
@@ -14,5 +14,5 @@ metadata:
   {{- end }}
 type: Opaque
 stringData:
-  SPRING_APPLICATION_ENCRYPTION_SECRET: {{ include "docspace.generateSecret" (list . .Values.identity.secret.springEncryptionValue $secretName "SPRING_APPLICATION_ENCRYPTION_SECRET") | quote }}
+  SPRING_APPLICATION_ENCRYPTION_SECRET: {{ include "docspace.generateSecret" (list . (include "docspace.identity.springEncryptionValue" .) $secretName "SPRING_APPLICATION_ENCRYPTION_SECRET") | quote }}
 {{- end }}
