--- a/values.yaml
+++ b/values.yaml
@@ -3136,6 +3136,9 @@ identity:
     existingSecret: ""
     # identity.secret.springEncryptionValue The secret key used for encrypting sensitive data such as client_secret, access_token, and refresh_token
     springEncryptionValue: ""
+    # identity.secret.generate If true, a new secret will be automatically generated
+    # If you experience OAuth2 access issues, set this to "false"
+    generate: "true"
   # DocSpace Identity Authorization application parameters
   # This block defines the parameters common to all the Pods of this application
   #
