--- a/templates/secrets/langflow.yaml
+++ b/templates/secrets/langflow.yaml
@@ -14,5 +14,5 @@ metadata:
   {{- end }}
 type: Opaque
 stringData:
-  LANGFLOW_SECRET_KEY: {{ include "docspace.generateSecret" (list . .Values.langflow.secret.langflowSecretKey $secretName "LANGFLOW_SECRET_KEY") | quote }}
+  LANGFLOW_SECRET_KEY: {{ include "langflow.generateSecret" (list . .Values.langflow.secret.langflowSecretKey $secretName "LANGFLOW_SECRET_KEY") | quote }}
 {{- end }}
