--- a/templates/secrets/langflow.yaml
+++ b/templates/secrets/langflow.yaml
@@ -15,4 +15,5 @@ metadata:
 type: Opaque
 stringData:
   LANGFLOW_SECRET_KEY: {{ include "langflow.generateSecret" (list . .Values.langflow.secret.langflowSecretKey $secretName "LANGFLOW_SECRET_KEY") | quote }}
+  OPENAI_API_KEY: {{ include "docspace.langflow.getExistingSecret" (list . .Values.langflow.secret.openaiApiKey $secretName "OPENAI_API_KEY") }}
 {{- end }}
