--- a/templates/secrets/pgvector.yaml
+++ b/templates/secrets/pgvector.yaml
@@ -36,7 +36,15 @@ metadata:
   {{- end }}
 data:
   LANGFLOW_DATABASE_URL: {{ include "docspace.langflow.databaseUrl" $password }}
-  LANGFLOW_LOG_LEVEL: "INFO"
+  LANGFLOW_LOG_LEVEL: {{ .Values.log.level | quote}}
+  HOST_QDRANT_SERVICE: {{ .Values.connections.qdrant.host | quote}}
+  HOST_QDRANT_PORT: {{ .Values.connections.qdrant.port | quote}}
+  API_ROUTER_HOST: {{ .Values.connections.appUrlPortal | quote }}
+  HOST_API_SERVICE: "http://{{ .Values.connections.apiHost }}.default.svc.cluster.local:{{ .Values.api.containerPorts.app }}"
+  HOST_FILES_SERVICE: "http://{{ .Values.connections.filesHost }}.default.svc.cluster.local:{{ .Values.files.containerPorts.app }}"
+  LANGFLOW_AUTO_LOGIN: "true"
+  LANGFLOW_CONFIG_DIR: "/app/langflow"
+  LANGFLOW_NEW_USER_IS_ACTIVE: "False"
 {{- end }}
 
 
