--- a/values.yaml
+++ b/values.yaml
@@ -3547,7 +3547,8 @@ langflow:
     # langflow.secret.langflowSecretKey Key used for encrypting sensitive data like API keys
     langflowSecretKey: ""
     # langflow.secret.openaiApiKey is OpenAI API key
-    openaiApiKey: ""
+    # langflow.env.langflowConfigDir Set the Langflow configuration directory where files, logs, and the Langflow database are stored
+    langflowConfigDir: "/app/langflow"
   # DocSpace Langflow Backend application parameters
   # This block defines the parameters common to all the Pods of this application
   #
