--- a/templates/secrets/pgvector.yaml
+++ b/templates/secrets/pgvector.yaml
@@ -42,9 +42,7 @@ data:
   API_ROUTER_HOST: {{ .Values.connections.appUrlPortal | quote }}
   HOST_API_SERVICE: "http://{{ .Values.connections.apiHost }}.default.svc.cluster.local:{{ .Values.api.containerPorts.app }}"
   HOST_FILES_SERVICE: "http://{{ .Values.connections.filesHost }}.default.svc.cluster.local:{{ .Values.files.containerPorts.app }}"
-  LANGFLOW_AUTO_LOGIN: "true"
-  LANGFLOW_CONFIG_DIR: "/app/langflow"
-  LANGFLOW_NEW_USER_IS_ACTIVE: "False"
+  LANGFLOW_CONFIG_DIR: {{ .Values.langflow.env.langflowConfigDir | quote }}
 {{- end }}
 
 
