--- a/templates/secrets/pgvector.yaml
+++ b/templates/secrets/pgvector.yaml
@@ -22,27 +22,19 @@ stringData:
 ---
 {{- if .Values.langflow.enabled }}
 apiVersion: v1
-kind: ConfigMap
+kind: Secret
 metadata:
-  name: langflow
+  name: docspace-langflow-url
   namespace: {{ include "docspace.namespace" . | quote }}
   {{- if .Values.commonLabels }}
   labels:
-    {{- include "docspace.labels.commonLabels" . | trim | nindent 4 }}
+    {{- include "docspace.labels.commonLabels" . | nindent 4 }}
   {{- end }}
   {{- if .Values.commonAnnotations }}
   annotations:
 {{ include "docspace.annotations" (dict "keyName" .Values.commonAnnotations "context" $) | nindent 4 }}
   {{- end }}
-data:
+type: Opaque
+stringData:
   LANGFLOW_DATABASE_URL: {{ include "docspace.langflow.databaseUrl" $password }}
-  LANGFLOW_LOG_LEVEL: {{ .Values.log.level | quote}}
-  HOST_QDRANT_SERVICE: {{ .Values.connections.qdrant.host | quote}}
-  HOST_QDRANT_PORT: {{ .Values.connections.qdrant.port | quote}}
-  API_ROUTER_HOST: {{ .Values.connections.appUrlPortal | quote }}
-  HOST_API_SERVICE: "http://{{ .Values.connections.apiHost }}.default.svc.cluster.local:{{ .Values.api.containerPorts.app }}"
-  HOST_FILES_SERVICE: "http://{{ .Values.connections.filesHost }}.default.svc.cluster.local:{{ .Values.files.containerPorts.app }}"
-  LANGFLOW_CONFIG_DIR: {{ .Values.langflow.env.langflowConfigDir | quote }}
 {{- end }}
-
-
